--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -429,25 +429,24 @@ Because real hospitality is not just about what you serve — it's about how you
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Birthday Parties</h3>
-                  <div class="price">
-                    <p><span>$189</span></p>
-                  </div>
-                  <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
-                  </p>
-                  <ul>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  </ul>
-                  <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
-                  </p>
-                </div>
-              </div>
-            </div><!-- End Slider item -->
+          <div class="price">
+            <p><span>$189</span></p>
+          </div>
+          <p class="fst-italic">
+            Celebrate your special day with delicious dishes and warm Stone Grill hospitality.
+          </p>
+          <ul>
+            <li><i class="bi bi-check2-circle"></i> <span>Custom menus perfect for any age group or taste.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Comfortable, family-friendly ambiance for your celebration.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Service that lets you relax and enjoy your moment.</span></li>
+          </ul>
+          <p>
+            Whether it’s a quiet dinner or a big party, we’ll help you make lasting memories with food, friends, and fun.
+          </p>
+        </div>
+      </div>
+    </div><!-- End Slider item -->
+
 
             <div class="swiper-slide">
               <div class="row gy-4 event-item">
@@ -456,56 +455,52 @@ Because real hospitality is not just about what you serve — it's about how you
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Private Parties</h3>
-                  <div class="price">
-                    <p><span>$290</span></p>
-                  </div>
-                  <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
-                  </p>
-                  <ul>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  </ul>
-                  <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
-                  </p>
-                </div>
-              </div>
-            </div><!-- End Slider item -->
-
-            <div class="swiper-slide">
-              <div class="row gy-4 event-item">
-                <div class="col-lg-6">
-                  <img src="assets/img/events-slider/events-slider-3.jpg" class="img-fluid" alt="">
-                </div>
-                <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Custom Parties</h3>
-                  <div class="price">
-                    <p><span>
-                    </span></p>
-                  </div>
-                  <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
-                  </p>
-                  <ul>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                    <li><i class="bi bi-check2-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  </ul>
-                  <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur
-                  </p>
-                </div>
-              </div>
-            </div><!-- End Slider item -->
-
+          <div class="price">
+            <p><span>$290</span></p>
           </div>
-          <div class="swiper-pagination"></div>
+          <p class="fst-italic">
+            Gather your closest family and friends for a cozy, unforgettable celebration.
+          </p>
+          <ul>
+            <li><i class="bi bi-check2-circle"></i> <span>Great for reunions, corporate events, or anniversaries.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Custom seating and ambiance tailored to your needs.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Affordable, flexible packages with premium service.</span></li>
+          </ul>
+          <p>
+            Let us host your private event and turn it into a night filled with flavor, joy, and connection.
+          </p>
+        </div>
+      </div>
+    </div><!-- End Slider item -->
+
+    <div class="swiper-slide">
+      <div class="row gy-4 event-item">
+        <div class="col-lg-6">
+          <img src="assets/img/events-slider/events-slider-3.jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-6 pt-4 pt-lg-0 content">
+          <h3>Custom Parties</h3>
+          <div class="price">
+            <p><span>
+            </span></p>
+          </div>
+          <p class="fst-italic">
+            Plan your own unique party — and we’ll take care of the delicious details.
+          </p>
+          <ul>
+            <li><i class="bi bi-check2-circle"></i> <span>Themed dishes and décor tailored for your vision.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Personalized setup and music upon request.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Friendly team ready to bring your ideas to life.</span></li>
+          </ul>
+          <p>
+            From concept to celebration, we help you create a one-of-a-kind event full of flavor and meaning.
+          </p>
+        </div>
+      </div>
+    </div><!-- End Slider item -->
+
+  </div>
+  <div class="swiper-pagination"></div>
         </div>
 
       </div>
