--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -104,7 +104,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
+          <img src="assets/img/hero-carousel/hero-carousel-1.jpeg" alt="">
           <div class="carousel-container">
             <h2><span>Stone Grill</span> Restaurant</h2>
             <p>Here, every dish is crafted with passion, every table prepared with care, and every moment designed to be enjoyable and relaxing. Whether you're joining us for a quiet dinner, a joyful celebration, or simply a comforting meal, we promise to make it worth your time and taste..</p>
@@ -116,7 +116,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
+          <img src="assets/img/hero-carousel/hero-carousel-2.jpeg" alt="">
           <div class="carousel-container">
             <h2>Because You Deserve the Best Moments</h2>
             <p>At Stone Grill, every delight is to be embraced, every discomfort gently set aside. And even during busy days or special obligations, there’s always a place for good food and warm hospitality.</p>
@@ -128,7 +128,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
+          <img src="assets/img/hero-carousel/hero-carousel-3.jpeg" alt="">
           <div class="carousel-container">
             <h2>Because Not All Comforts Are Equal</h2>
             <p>True comfort isn’t just in ease, but in what’s worth savoring.
@@ -428,9 +428,9 @@ Because real hospitality is not just about what you serve — it's about how you
                   <img src="assets/img/events-slider/events-slider-1.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Birthday Parties</h3>
+                  <h3>Package Regular</h3>
           <div class="price">
-            <p><span>$189</span></p>
+            <p><span>P12,500</span></p>
           </div>
           <p class="fst-italic">
             Celebrate your special day with delicious dishes and warm Stone Grill hospitality.
@@ -454,9 +454,9 @@ Because real hospitality is not just about what you serve — it's about how you
                   <img src="assets/img/events-slider/events-slider-2.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
-                  <h3>Private Parties</h3>
+                  <h3>Package Premium</h3>
           <div class="price">
-            <p><span>$290</span></p>
+            <p><span>P14,500</span></p>
           </div>
           <p class="fst-italic">
             Gather your closest family and friends for a cozy, unforgettable celebration.
@@ -479,7 +479,7 @@ Because real hospitality is not just about what you serve — it's about how you
           <img src="assets/img/events-slider/events-slider-3.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0 content">
-          <h3>Custom Parties</h3>
+          <h3>Cattering</h3>
           <div class="price">
             <p><span>
             </span></p>
