--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -104,7 +104,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/hero-carousel-1.jpeg" alt="">
+          <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
             <h2><span>Stone Grill</span> Restaurant</h2>
             <p>Here, every dish is crafted with passion, every table prepared with care, and every moment designed to be enjoyable and relaxing. Whether you're joining us for a quiet dinner, a joyful celebration, or simply a comforting meal, we promise to make it worth your time and taste..</p>
