--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -13,6 +13,8 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy:wght@400&display=swap" rel="stylesheet">
@@ -205,7 +207,7 @@ Every plate is prepared with care, every visit guided by our passion to serve, a
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card-item">
               <span>01</span>
-              <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
+              <h4><a href="" class="stretched-link">Hospitality</a></h4>
               <p>We put care into every effort, and every detail is meant to bring comfort.
 Because real hospitality is not just about what you serve — it's about how you make people feel.</p>
             </div>
@@ -257,7 +259,7 @@ Because real hospitality is not just about what you serve — it's about how you
       <div class="col-lg-6 menu-item isotope-item filter-starters">
         <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Lobster Bisque</a><span>$5.95</span>
+          <a href="#">Crispy Pata</a><span>₱ 540</span>
         </div>
         <div class="menu-ingredients">
           Creamy lobster soup served hot and flavorful.
@@ -267,10 +269,10 @@ Because real hospitality is not just about what you serve — it's about how you
       <div class="col-lg-6 menu-item isotope-item filter-specialty">
         <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Bread Barrel</a><span>$6.95</span>
+          <a href="#">Pancit Canton</a><span>₱200</span>
         </div>
         <div class="menu-ingredients">
-          Soft, freshly baked bread with local dips.
+          Classic stir-fried noodles loaded with veggies, meat, and savory flavor — a Filipino favorite, Stone Grill style
         </div>
       </div>
 
