--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -8,9 +8,12 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Standard favicon (multi-size .ico) -->
+<link rel="image/x-icon" href="Delicious/assets/img/favicon.ico" sizes="any">
+<!-- Apple Touch Icon -->
+<link rel="apple-touch-icon" href="Delicious/assets/img/apple-touch-icon.png">
+<!-- Optional: Android manifest -->
+<link rel="manifest" href="/site.webmanifest">
 
   <!-- Fonts -->
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
@@ -990,6 +993,7 @@ Because real hospitality is not just about what you serve — it's about how you
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
