--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -9,9 +9,9 @@
   <meta name="keywords" content="">
 
   <!-- Standard favicon (multi-size .ico) -->
-<link rel="image/x-icon" href="Delicious/assets/img/favicon.ico" sizes="any">
+<link rel="image/x-icon" href="/assets/img/favicon.ico" sizes="any">
 <!-- Apple Touch Icon -->
-<link rel="apple-touch-icon" href="Delicious/assets/img/apple-touch-icon.png">
+<link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
 <!-- Optional: Android manifest -->
 <link rel="manifest" href="/site.webmanifest">
 
