--- a/Delicious/index.html
+++ b/Delicious/index.html
@@ -167,7 +167,7 @@ While not every moment is perfect, the joy found in shared meals and genuine hos
         <div class="row gy-4">
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
+            <a href="https://youtu.be/drk9LQOVw8Q?si=cADiSogdYjW-93S4" class="glightbox pulsating-play-btn"></a>
           </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
             <h3>We provide exceptional experiences, as if true comfort and satisfaction were made to be embraced.</h3>
