--- a/index.html
+++ b/index.html
@@ -211,24 +211,23 @@ Every plate is prepared with care, every visit guided by our passion to serve, a
             <div class="card-item">
               <span>01</span>
               <h4><a href="" class="stretched-link">Hospitality</a></h4>
-              <p>We put care into every effort, and every detail is meant to bring comfort.
-Because real hospitality is not just about what you serve — it's about how you make people feel.</p>
+              <p>We put care into every effort, and every detail is meant to bring comfort. Because real hospitality is not just about what you serve — it's about how you make people feel.</p>
             </div>
           </div><!-- Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card-item">
               <span>02</span>
-              <h4><a href="" class="stretched-link">Repellat Nihil</a></h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+              <h4><a href="" class="stretched-link">Wide Selection of Dishes</a></h4>
+              <p>From Filipino classics like Crispy Pata and Chopsuey to premium seafood like Grilled Fish and Scallops, there's something for every craving.</p>
             </div>
           </div><!-- Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card-item">
               <span>03</span>
-              <h4><a href="" class="stretched-link">Ad ad velit qui</a></h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <h4><a href="" class="stretched-link">Ideal for Celebrations</a></h4>
+              <p>Planning a birthday, anniversary, or get-together? Our friendly staff and festive atmosphere make any day special.</p>
             </div>
           </div><!-- Card Item -->
 
@@ -265,7 +264,7 @@ Because real hospitality is not just about what you serve — it's about how you
           <a href="#">Crispy Pata</a><span>₱ 540</span>
         </div>
         <div class="menu-ingredients">
-          Creamy lobster soup served hot and flavorful.
+          Tender pork leg deep-fried to golden perfection—crispy on the outside, juicy on the inside. Served with our special dipping sauce.
         </div>
       </div>
 
@@ -282,10 +281,10 @@ Because real hospitality is not just about what you serve — it's about how you
       <div class="col-lg-6 menu-item isotope-item filter-starters">
         <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Crab Cake</a><span>$7.95</span>
+          <a href="#">Calamari</a><span>280</span>
         </div>
         <div class="menu-ingredients">
-          A delicate crab cake on a toasted roll with lettuce and tartar sauce.
+          Lightly breaded and fried to a golden crisp, our tender squid rings are served with zesty dipping sauce—perfectly crunchy, irresistibly good..
         </div>
       </div>
 
@@ -302,37 +301,37 @@ Because real hospitality is not just about what you serve — it's about how you
       <div class="col-lg-6 menu-item isotope-item filter-specialty">
         <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Tuscan Grilled</a><span>$9.95</span>
+          <a href="#">Grilled Fish</a><span>310</span>
         </div>
         <div class="menu-ingredients">
-          Grilled chicken with cheese, artichoke, and roasted red pesto.
+         resh, tender fish grilled over hot stone to bring out its natural flavors—served with a side of vegetables and our house dipping sauce.
         </div>
       </div>
 
       <div class="col-lg-6 menu-item isotope-item filter-starters">
         <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Mozzarella Stick</a><span>$4.95</span>
+          <a href="#">Chopsuey</a><span>210</span>
         </div>
         <div class="menu-ingredients">
-          Golden and crispy, served with tangy marinara.
+          A colorful mix of fresh vegetables stir-fried with tender meat in a savory sauce—crisp, hearty, and full of flavor.
         </div>
       </div>
 
       <div class="col-lg-6 menu-item isotope-item filter-salads">
         <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Greek Salad</a><span>$9.95</span>
+          <a href="#">Scallops</a><span>280</span>
         </div>
         <div class="menu-ingredients">
-          Fresh greens, tomatoes, cucumber, feta, and olives.
+          Grilled to a golden finish, our juicy scallops are served with a buttery garlic sauce—tender, rich, and simply satisfying.
         </div>
       </div>
 
       <div class="col-lg-6 menu-item isotope-item filter-salads">
         <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Spinach Salad</a><span>$9.95</span>
+          <a href="#">Spinach Salad</a><span>9.95</span>
         </div>
         <div class="menu-ingredients">
           Spinach, mushrooms, egg, and bacon vinaigrette.
@@ -342,7 +341,7 @@ Because real hospitality is not just about what you serve — it's about how you
       <div class="col-lg-6 menu-item isotope-item filter-specialty">
         <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Lobster Roll</a><span>$12.95</span>
+          <a href="#">Crabs</a><span>250</span>
         </div>
         <div class="menu-ingredients">
           Lobster meat with mayo and lettuce on a toasted roll.
@@ -386,9 +385,9 @@ Because real hospitality is not just about what you serve — it's about how you
           <div class="tab-pane active show" id="specials-tab-1">
             <div class="row">
               <div class="col-lg-8 details order-2 order-lg-1">
-                <h3>Sizzling Stone-Grilled Chicken</h3>
+                <h3>Food Package</h3>
                 <p class="fst-italic">Flame-grilled with bold flavors and served on hot stone.</p>
-                <p>Enjoy our signature grilled chicken with your choice of sauce and sides — perfect for those who love a meal that sizzles with taste and excitement.</p>
+                <p>Enjoy our signature dish with your choice of sauce and sides — perfect for those who love a meal that sizzles with taste and excitement.</p>
               </div>
               <div class="col-lg-4 text-center order-1 order-lg-2">
                 <img src="assets/img/specials-1.jpg" alt="" class="img-fluid">
@@ -438,15 +437,15 @@ Because real hospitality is not just about what you serve — it's about how you
             <p><span>P12,500</span></p>
           </div>
           <p class="fst-italic">
-            Celebrate your special day with delicious dishes and warm Stone Grill hospitality.
+            50 PAX with Rice and Drinks.
           </p>
           <ul>
-            <li><i class="bi bi-check2-circle"></i> <span>Custom menus perfect for any age group or taste.</span></li>
-            <li><i class="bi bi-check2-circle"></i> <span>Comfortable, family-friendly ambiance for your celebration.</span></li>
-            <li><i class="bi bi-check2-circle"></i> <span>Service that lets you relax and enjoy your moment.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>PORK: Cooked Your Way or Choose your preferred recipe</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Chicken: Choose your preferred recipe or cooking style.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Pancit or Vegetables: Choose your preferred recipe</span></li>
           </ul>
           <p>
-            Whether it’s a quiet dinner or a big party, we’ll help you make lasting memories with food, friends, and fun.
+            The Venue is FREE.
           </p>
         </div>
       </div>
@@ -464,12 +463,13 @@ Because real hospitality is not just about what you serve — it's about how you
             <p><span>P14,500</span></p>
           </div>
           <p class="fst-italic">
-            Gather your closest family and friends for a cozy, unforgettable celebration.
+            50 PAX with Rice and Drinks..
           </p>
           <ul>
-            <li><i class="bi bi-check2-circle"></i> <span>Great for reunions, corporate events, or anniversaries.</span></li>
-            <li><i class="bi bi-check2-circle"></i> <span>Custom seating and ambiance tailored to your needs.</span></li>
-            <li><i class="bi bi-check2-circle"></i> <span>Affordable, flexible packages with premium service.</span></li>
+             <li><i class="bi bi-check2-circle"></i> <span>PORK: Cooked Your Way or Choose your preferred recipe</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Chicken: Choose your preferred recipe or cooking style.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Pancit or Vegetables: Choose your preferred recipe</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Fish or Beef: Choose your preferred recipe</span></li>
           </ul>
           <p>
             Let us host your private event and turn it into a night filled with flavor, joy, and connection.
@@ -484,18 +484,20 @@ Because real hospitality is not just about what you serve — it's about how you
           <img src="assets/img/events-slider/events-slider-3.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0 content">
-          <h3>Cattering</h3>
+          <h3>De Luxe</h3>
           <div class="price">
-            <p><span>
+            <p><span>16,500
             </span></p>
           </div>
           <p class="fst-italic">
-            Plan your own unique party — and we’ll take care of the delicious details.
+            50 PAX with Rice and Drinks.
           </p>
           <ul>
-            <li><i class="bi bi-check2-circle"></i> <span>Themed dishes and décor tailored for your vision.</span></li>
-            <li><i class="bi bi-check2-circle"></i> <span>Personalized setup and music upon request.</span></li>
-            <li><i class="bi bi-check2-circle"></i> <span>Friendly team ready to bring your ideas to life.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>PORK: Cooked Your Way or Choose your preferred recipe</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Chicken: Choose your preferred recipe or cooking style.</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>Pancit or Vegetables: Choose your preferred recipe</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>FISH: Choose your preferred recipe</span></li>
+            <li><i class="bi bi-check2-circle"></i> <span>BEEF: Choose your preferred recipe</span></li>
           </ul>
           <p>
             From concept to celebration, we help you create a one-of-a-kind event full of flavor and meaning.
