--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
           <div class="carousel-container">
             <h2><span>Stone Grill</span> Restaurant</h2>
-            <p>Here, every dish is crafted with passion, every table prepared with care, and every moment designed to be enjoyable and relaxing. Whether you're joining us for a quiet dinner, a joyful celebration, or simply a comforting meal, we promise to make it worth your time and taste..</p>
+            <p>Whether it’s a quiet dinner or a big party, we’ll help you make lasting memories and to make it worth your time and taste..</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
               <a href="#book-a-table" class="btn-get-started">Book a table</a>
@@ -123,7 +123,7 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-2.jpeg" alt="">
           <div class="carousel-container">
-            <h2>Because You Deserve the Best Moments</h2>
+            <h2>Service that lets you relax and enjoy your moment.</h2>
             <p>At Stone Grill, every delight is to be embraced, every discomfort gently set aside. And even during busy days or special obligations, there’s always a place for good food and warm hospitality.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
@@ -135,9 +135,8 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-3.jpeg" alt="">
           <div class="carousel-container">
-            <h2>Because Not All Comforts Are Equal</h2>
-            <p>True comfort isn’t just in ease, but in what’s worth savoring.
-While not every moment is perfect, the joy found in shared meals and genuine hospitality makes each visit worthwhile. At Stone Grill, we embrace what matters, good food, warm hearts, and time well spent.</p>
+            <h2>Great for reunions, corporate events, or anniversaries</h2>
+            <p>the joy found in shared meals and genuine hospitality makes each visit worthwhile. At Stone Grill, we embrace what matters, good food, warm hearts, and time well spent.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
               <a href="#book-a-table" class="btn-get-started">Book a table</a>
@@ -172,20 +171,15 @@ While not every moment is perfect, the joy found in shared meals and genuine hos
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
             <h3>We provide exceptional experiences, as if true comfort and satisfaction were made to be embraced.</h3>
             <p class="fst-italic">
-              Hungry for more than just food?
-At Stone Grill, we serve experiences as much as we serve meals - warm, satisfying, and made with care.
+              At Stone Grill, we serve experiences as much as we serve meals - warm, satisfying, and made with care.
             </p>
             <ul>
               <li><i class="bi bi-check2-all"></i> <span>Work is not done unless it produces a benefit or pleasant result..</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>True satisfaction comes not just from flavor, but from how it makes you feel.
-At Stone Grill, we serve meals that leave no regrets — only warmth and good memories.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>We don’t settle for just good enough. Because at Stone Grill, your dining experience should be more than a meal — it should be a moment to remember.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>At Stone Grill, we serve meals that leave no regrets — only warmth and good memories.</span></li>
+              <li><i class="bi bi-check2-all"></i> <span>your dining experience should be more than a meal — it should be a moment to remember.</span></li>
             </ul>
             <p>
-              We don’t just serve food — we create moments worth remembering.
-Every plate is prepared with care, every visit guided by our passion to serve, and every detail made to bring you comfort and joy.
-
-
+              Every plate is prepared with care, every visit guided by our passion to serve, and every detail made to bring you comfort and joy.
             </p>
           </div>
         </div>
@@ -331,10 +325,10 @@ Every plate is prepared with care, every visit guided by our passion to serve, a
       <div class="col-lg-6 menu-item isotope-item filter-salads">
         <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Spinach Salad</a><span>9.95</span>
+          <a href="#">Boodle</a><span>2,300</span>
         </div>
         <div class="menu-ingredients">
-          Spinach, mushrooms, egg, and bacon vinaigrette.
+          A feast for the senses! An abundant spread of fresh seafood—shrimps, crabs, mussels, squid, and more—served with rice.
         </div>
       </div>
 
@@ -926,7 +920,7 @@ Every plate is prepared with care, every visit guided by our passion to serve, a
           <i class="bi bi-geo-alt icon"></i>
           <div class="address">
             <h4>Address</h4>
-            <p>J.P. Riza street</p>
+            <p>J.P. Rizal street</p>
             <p>Brgy. Tinago Bato, Leyte </p>
             <p></p>
           </div>
