--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
       <div class="col-lg-6 menu-item isotope-item filter-salads">
         <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Caesar Selections</a><span>$8.95</span>
+          <a href="#">Fruit Shakes</a><span>75</span>
         </div>
         <div class="menu-ingredients">
-          Crisp romaine, parmesan, croutons, and Caesar dressing.
+          made from real, ripe fruits blended to perfection. Naturally sweet, icy, and energizing in every sip.
         </div>
       </div>
 
@@ -380,7 +380,7 @@
             <div class="row">
               <div class="col-lg-8 details order-2 order-lg-1">
                 <h3>Food Package</h3>
-                <p class="fst-italic">Flame-grilled with bold flavors and served on hot stone.</p>
+                <p class="fst-italic">with bold flavors.</p>
                 <p>Enjoy our signature dish with your choice of sauce and sides — perfect for those who love a meal that sizzles with taste and excitement.</p>
               </div>
               <div class="col-lg-4 text-center order-1 order-lg-2">
