--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <section id="menu" class="menu section">
   <div class="container section-title" data-aos="fade-up">
     <h2>Menu</h2>
-    <div><span>Explore Our Delicious</span> <span class="description-title">Stone Grill Dishes</span></div>
+    <div><span>Explore</span> <span class="description-title">Stone Grill Dishes</span></div>
   </div>
 
   <div class="container isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
@@ -466,7 +466,7 @@
             <li><i class="bi bi-check2-circle"></i> <span>Fish or Beef: Choose your preferred recipe</span></li>
           </ul>
           <p>
-            Let us host your private event and turn it into a night filled with flavor, joy, and connection.
+            The Venue is FREE.
           </p>
         </div>
       </div>
@@ -494,7 +494,7 @@
             <li><i class="bi bi-check2-circle"></i> <span>BEEF: Choose your preferred recipe</span></li>
           </ul>
           <p>
-            From concept to celebration, we help you create a one-of-a-kind event full of flavor and meaning.
+            The Venue is FREE.
           </p>
         </div>
       </div>
