--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <meta name="keywords" content="">
 
   <!-- Standard favicon (multi-size .ico) -->
-<link rel="image/x-icon" href="/assets/img/favicon.ico" sizes="any">
+<link rel="image/x-icon" href="assets/img/favicon.ico" sizes="any">
 <!-- Apple Touch Icon -->
-<link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
+<link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
 <!-- Optional: Android manifest -->
-<link rel="manifest" href="/site.webmanifest">
+<link rel="manifest" href="site.webmanifest">
 
   <!-- Fonts -->
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
