--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Apple Touch Icon -->
 <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
 <!-- Optional: Android manifest -->
-<link rel="manifest" href="site.webmanifest">
+<link rel="manifest" href="https://stonegrillrestaurant.github.io/Delicious/site.webmanifest">
 
   <!-- Fonts -->
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
