--- a/index.html
+++ b/index.html
@@ -516,6 +516,12 @@
         <h2>Book A Table</h2>
         <div><span>Book a</span> <span class="description-title">Table</span></div>
       </div><!-- End Section Title -->
+      <div class="text-center mt-4">
+  <a href="https://m.me/349741858566089" target="_blank" class="btn btn-success">
+    💬 Book a Table via Messenger
+  </a>
+</div>
+
 
       <div class="container">
 
@@ -524,7 +530,7 @@
           <div class="col-lg-4 reservation-img" style="background-image: url(assets/img/reservation.jpg);"></div>
 
           <div class="col-lg-8 d-flex align-items-center reservation-form-bg" data-aos="fade-up" data-aos-delay="200">
-            <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/your-form-id" method="POST" class="php-email-form">
               <div class="row gy-4">
                 <div class="col-lg-4 col-md-6">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
