--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         <div><span>Book a</span> <span class="description-title">Table</span></div>
       </div><!-- End Section Title -->
       <div class="text-center mt-4">
-  <a href="https://m.me/349741858566089" target="_blank" class="btn btn-success">
+  <a href="https://m.me/349741858566089" target="_blank" class="btn btn-primary">
     💬 Book a Table via Messenger
   </a>
 </div>
