--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-2.jpeg" alt="">
+          <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
             <h2>Service that lets you relax and enjoy your moment.</h2>
             <p>At Stone Grill, every delight is to be embraced, every discomfort gently set aside. And even during busy days or special obligations, there’s always a place for good food and warm hospitality.</p>
@@ -133,7 +133,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-3.jpeg" alt="">
+          <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
           <div class="carousel-container">
             <h2>Great for reunions, corporate events, or anniversaries</h2>
             <p>the joy found in shared meals and genuine hospitality makes each visit worthwhile. At Stone Grill, we embrace what matters, good food, warm hearts, and time well spent.</p>
