--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
             <a href="https://youtu.be/drk9LQOVw8Q?si=cADiSogdYjW-93S4" class="glightbox pulsating-play-btn"></a>
           </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
-            <h3>We provide exceptional experiences, as if true comfort and satisfaction were made to be embraced.</h3>
+            <h3>Personalized setup and music upon reques.</h3>
             <p class="fst-italic">
-              At Stone Grill, we serve experiences as much as we serve meals - warm, satisfying, and made with care.
+              At Stone Grill, we serve experiences as much as we serve meals.
             </p>
             <ul>
               <li><i class="bi bi-check2-all"></i> <span>Work is not done unless it produces a benefit or pleasant result..</span></li>
