--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
-            <h2>Service that lets you relax and enjoy your moment.</h2>
+            <h3>Service that lets you relax and enjoy your moment.</h3>
             <p>At Stone Grill, every delight is to be embraced, every discomfort gently set aside. And even during busy days or special obligations, there’s always a place for good food and warm hospitality.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
@@ -135,7 +135,7 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
           <div class="carousel-container">
-            <h2>Great for reunions, corporate events, or anniversaries</h2>
+            <h3>Great for reunions, corporate events, or anniversaries</h3>
             <p>the joy found in shared meals and genuine hospitality makes each visit worthwhile. At Stone Grill, we embrace what matters, good food, warm hearts, and time well spent.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
@@ -169,7 +169,7 @@
             <a href="https://youtu.be/drk9LQOVw8Q?si=cADiSogdYjW-93S4" class="glightbox pulsating-play-btn"></a>
           </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
-            <h3>Personalized setup and music upon reques.</h3>
+            <h3>Personalized setup and music upon request.</h3>
             <p class="fst-italic">
               At Stone Grill, we serve experiences as much as we serve meals.
             </p>
