--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <ul class="menu-filters isotope-filters">
           <li data-filter="*" class="filter-active">All</li>
           <li data-filter=".filter-starters">Starters</li>
-          <li data-filter=".filter-salads">Salads</li>
+          <li data-filter=".filter-salads">Refreshments</li>
           <li data-filter=".filter-specialty">Stone Grill Specials</li>
         </ul>
       </div>
@@ -255,7 +255,7 @@
       <div class="col-lg-6 menu-item isotope-item filter-starters">
         <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Crispy Pata</a><span>₱ 540</span>
+          <a href="#">Crispy Pata</a><span>₱540</span>
         </div>
         <div class="menu-ingredients">
           Tender pork leg deep-fried to golden perfection—crispy on the outside, juicy on the inside. Served with our special dipping sauce.
@@ -275,7 +275,7 @@
       <div class="col-lg-6 menu-item isotope-item filter-starters">
         <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Calamari</a><span>280</span>
+          <a href="#">Calamari</a><span>₱300</span>
         </div>
         <div class="menu-ingredients">
           Lightly breaded and fried to a golden crisp, our tender squid rings are served with zesty dipping sauce—perfectly crunchy, irresistibly good..
@@ -285,7 +285,7 @@
       <div class="col-lg-6 menu-item isotope-item filter-salads">
         <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Fruit Shakes</a><span>75</span>
+          <a href="#">Fruit Shakes</a><span>₱75</span>
         </div>
         <div class="menu-ingredients">
           made from real, ripe fruits blended to perfection. Naturally sweet, icy, and energizing in every sip.
@@ -295,7 +295,7 @@
       <div class="col-lg-6 menu-item isotope-item filter-specialty">
         <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Grilled Fish</a><span>310</span>
+          <a href="#">Grilled Fish</a><span>₱310</span>
         </div>
         <div class="menu-ingredients">
          resh, tender fish grilled over hot stone to bring out its natural flavors—served with a side of vegetables and our house dipping sauce.
@@ -305,7 +305,7 @@
       <div class="col-lg-6 menu-item isotope-item filter-starters">
         <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Chopsuey</a><span>210</span>
+          <a href="#">Chopsuey</a><span>₱210</span>
         </div>
         <div class="menu-ingredients">
           A colorful mix of fresh vegetables stir-fried with tender meat in a savory sauce—crisp, hearty, and full of flavor.
@@ -315,7 +315,7 @@
       <div class="col-lg-6 menu-item isotope-item filter-salads">
         <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">Scallops</a><span>280</span>
+          <a href="#">Scallops</a><span>₱280</span>
         </div>
         <div class="menu-ingredients">
           Grilled to a golden finish, our juicy scallops are served with a buttery garlic sauce—tender, rich, and simply satisfying.
