--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <i class="bi bi-phone d-flex align-items-center d-none d-lg-block"><span>+6353 568 0539</span></i>
           <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sun: 10:00 AM - 9:00 PM</span></i>
         </div>
-        <a href="#book-a-table" class="cta-btn">Book a table</a>
+        <a href=https://m.me/stonecitygrill" class="cta-btn">Book a table</a>
       </div>
     </div><!-- End Top Bar -->
 
