--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <p>the joy found in shared meals and genuine hospitality makes each visit worthwhile. At Stone Grill, we embrace what matters, good food, warm hearts, and time well spent.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="#book-a-table" class="btn-get-started">Book a table</a>
+              <a href="https://m.me/stonecitygrill" class="btn-get-started">Book a table</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
