--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <i class="bi bi-phone d-flex align-items-center d-none d-lg-block"><span>+6353 568 0539</span></i>
           <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sun: 10:00 AM - 9:00 PM</span></i>
         </div>
-        <a href=https://m.me/stonecitygrill" class="cta-btn">Book a table</a>
+        <a href="https://m.me/stonecitygrill" class="cta-btn">Book a table</a>
       </div>
     </div><!-- End Top Bar -->
 
@@ -71,7 +71,7 @@
             <li><a href="#menu">Menu</a></li>
             <li><a href="#specials">Specials</a></li>
             <li><a href="#events">Events</a></li>
-            <li><a href="#chefs">Chefs</a></li>
+            <li><a href="#chefs">STAFF</a></li>
             <li><a href="#gallery">Gallery</a></li>
             <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
@@ -115,7 +115,7 @@
             <p>Whether it’s a quiet dinner or a big party, we’ll help you make lasting memories and to make it worth your time and taste..</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="#book-a-table" class="btn-get-started">Book a table</a>
+              <a href="https://m.me/stonecitygrill" class="btn-get-started">Book a table</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -127,7 +127,7 @@
             <p>At Stone Grill, every delight is to be embraced, every discomfort gently set aside. And even during busy days or special obligations, there’s always a place for good food and warm hospitality.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="#book-a-table" class="btn-get-started">Book a table</a>
+              <a href="hytps://m.me/stonecitygrill" class="btn-get-started">Book a table</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
