--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <div><span>Check Our</span>Menu<span class="description-title">Contact</span></div>
+        <div><span>Check</span>Our<span class="description-title">Contact</span></div>
       </div><!-- End Section Title -->
 
       <div class="mb-5">
